<resources>
    <string name="app_name">1010</string>
    <string name="slogan">Receba feedbacks sinceros de suas fotos, textos e muito mais!</string>
    <string name="logo_content_description">white background showing \'10/10\' in black</string>
    <string name="nao_postamos">Não postamos nada no Facebook</string>
    <string name="ao_entrar">Ao entrar, você concorda com nossos</string>
    <string name="termos"><u>termos de serviço</u></string>
    <string name="politica_de_privacidade">e <u>politica de privacidade</u></string>
    <string name="firebase_error_login">Erro Firebase</string>
    <string name="error_login">Falha na conexão</string>
    <string name="use_terms">Termos de uso</string>
    <string name="privacy_policy">Politica de privacidade</string>
    <string name="facebook_app_id">845098899589154</string>
    <string name="fb_login_protocol_scheme">fb845098899589154</string>
    <string name="version">Versão %1$s</string>
    <string name="error">"Error: "</string>
    <string name="your_experiments">Seus experimentos</string>
    <string name="new_experiment">+ Novo Experimento</string>
    <string name="vote">Vote</string>
    <string name="power">Power: %1$s</string>
    <string name="valuations">%1$s Avaliações</string>
    <string name="details">Detalhes</string>
    <string name="comments">Comentários:</string>
    <string name="photo">Foto</string>
    <string name="text">Texto</string>
    <string name="rate_experiments">Avalie Experimentos</string>
    <string name="top">Top</string>
    <string name="Alto">High</string>
    <string name="Neutro">Medium</string>
    <string name="Baixo">Low</string>
    <string name="Vazio">Empty</string>
    <string name="choose_your_criteria">Selecione seus critérios:</string>
    <string name="add_media">Upload Foto</string>
    <string name="invalid_criteria">Critério Inválido</string>
</resources>