<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:fontFamily="@font/baloo"
        android:gravity="center|top"
        android:lineSpacingExtra="-12dp"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="@dimen/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:elevation="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_content_description"
                android:src="@drawable/logo" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="20dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="Versão 1.0.0"
        android:textSize="@dimen/small_text" />

    <LinearLayout
        android:id="@+id/layoutDown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/baloo"
            android:text="@string/ao_entrar"
            android:textSize="@dimen/info_small" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/baloo"
            android:text="@string/termos"
            android:textSize="@dimen/info_small" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-5dp"
            android:fontFamily="@font/baloo"
            android:text="@string/politica_de_privacidade"
            android:textSize="@dimen/info_small" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/baloo"
            android:text="@string/nao_postamos"
            android:textSize="@dimen/info_small" />
    </LinearLayout>

</LinearLayout>