<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".NewExperimentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:padding="@dimen/around_padding"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="center_horizontal"
            android:text="@string/new_experiment"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/experiment_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginVertical="@dimen/vertical_margin"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:checked="true"
                android:fontFamily="@font/baloo"
                android:text="@string/photo"
                android:textColor="@color/black"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:fontFamily="@font/baloo"
                android:text="@string/text"
                android:textColor="@color/black" />
        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:elevation="@dimen/elevation"
            app:cardCornerRadius="10dp">

            <Button
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/baloo"
                android:text="@string/vote" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/photo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/photo_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_photo" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/add_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/baloo"
                    android:paddingHorizontal="@dimen/around_padding"
                    android:text="@string/add_media" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--<LinearLayout
            android:id="@+id/text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/vertical_margin"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/horizontal_margin"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_write" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/choose_your_criteria"
                android:textColor="@color/black"
                android:textSize="@dimen/small_text" />

            <LinearLayout
                android:id="@+id/layout_criteria1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/criteria1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/add1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_criteria2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/criteria2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/add2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_criteria3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/criteria3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_experiments"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>