<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_weight="1"
                android:fontFamily="@font/baloo"
                android:text="@string/rate_experiments"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="4"
                android:src="@drawable/ic_profile" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:background="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="10dp">

                <Button
                    android:id="@+id/new_experiment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/baloo"
                    android:padding="@dimen/around_padding"
                    android:text="@string/new_experiment" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/power_indication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:lineSpacingExtra="-12dp"
                android:text="@string/power"
                android:textColor="@color/green"
                android:textSize="@dimen/medium_text" />

            <ProgressBar
                android:id="@+id/power_scale"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:progress="100"
                android:progressDrawable="@drawable/gradient_progress" />
        </LinearLayout>
    </LinearLayout>

    <Spinner
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin" />

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginVertical="@dimen/vertical_margin"
        app:max_visible="5"
        app:min_adapter_stack="5"
        app:rotation_degrees="16" />

</LinearLayout>